--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "ext-sqlite3": "*",
         "ext-xml": "*",
 
+        "squizlabs/php_codesniffer": "^3.5.6",
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*"
